--- a/spec/cassettes/Backgrounds_Endpoint/for_a_given_location/_gets_the_weather_forecast_info_for_the_front_end.yml
+++ b/spec/cassettes/Backgrounds_Endpoint/for_a_given_location/_gets_the_weather_forecast_info_for_the_front_end.yml
@@ -35,11 +35,11 @@ http_interactions:
       Access-Control-Expose-Headers:
       - Link,X-Total,X-Per-Page,X-RateLimit-Limit,X-RateLimit-Remaining
       Link:
-      - <https://api.unsplash.com/search/photos?client_id=<UNSPLASH_API_KEY>&page=1058&per_page=1&query=denver%2Cco>;
+      - <https://api.unsplash.com/search/photos?client_id=<UNSPLASH_API_KEY>&page=1072&per_page=1&query=denver%2Cco>;
         rel="last", <https://api.unsplash.com/search/photos?client_id=<UNSPLASH_API_KEY>&page=2&per_page=1&query=denver%2Cco>;
         rel="next"
       X-Total:
-      - '1058'
+      - '1072'
       X-Per-Page:
       - '1'
       Content-Type:
@@ -47,11 +47,11 @@ http_interactions:
       X-Ratelimit-Limit:
       - '50'
       X-Ratelimit-Remaining:
-      - '45'
+      - '49'
       X-Request-Id:
-      - be3b6f6f-3d66-4a25-ae75-56b11df1a987
+      - ae38f768-5755-4313-8a35-395552659487
       X-Runtime:
-      - '0.045436'
+      - '0.057519'
       Strict-Transport-Security:
       - max-age=31536000; includeSubDomains
       Via:
@@ -61,26 +61,26 @@ http_interactions:
       Accept-Ranges:
       - bytes
       Date:
-      - Wed, 15 Jan 2020 01:34:56 GMT
+      - Wed, 15 Jan 2020 16:01:06 GMT
       Age:
-      - '74816'
+      - '40371'
       X-Served-By:
-      - cache-iad2145-IAD, cache-den19625-DEN
+      - cache-iad2129-IAD, cache-den19623-DEN
       X-Cache:
-      - MISS, HIT
+      - HIT, HIT
       X-Cache-Hits:
-      - 0, 1
+      - 1, 1
       X-Timer:
-      - S1579052097.574795,VS0,VE2
+      - S1579104066.382649,VS0,VE1
       Vary:
       - Origin, Authorization
     body:
       encoding: UTF-8
-      string: '{"total":1058,"total_pages":1058,"results":[{"id":"pBtdIO99UIc","created_at":"2019-10-08T21:44:07-04:00","updated_at":"2019-12-14T00:04:38-05:00","promoted_at":null,"width":1944,"height":2592,"color":"#5EC0FF","description":"Colin
+      string: '{"total":1072,"total_pages":1072,"results":[{"id":"pBtdIO99UIc","created_at":"2019-10-08T21:44:07-04:00","updated_at":"2019-12-14T00:04:38-05:00","promoted_at":null,"width":1944,"height":2592,"color":"#5EC0FF","description":"Colin
         McIntosh sheetsgiggles.com","alt_description":"wide-angle photography of buildings
         during daytime","urls":{"raw":"https://images.unsplash.com/photo-1570585429632-e8b74372a3ed?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjExMDYyM30","full":"https://images.unsplash.com/photo-1570585429632-e8b74372a3ed?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjExMDYyM30","regular":"https://images.unsplash.com/photo-1570585429632-e8b74372a3ed?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjExMDYyM30","small":"https://images.unsplash.com/photo-1570585429632-e8b74372a3ed?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjExMDYyM30","thumb":"https://images.unsplash.com/photo-1570585429632-e8b74372a3ed?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=200&fit=max&ixid=eyJhcHBfaWQiOjExMDYyM30"},"links":{"self":"https://api.unsplash.com/photos/pBtdIO99UIc","html":"https://unsplash.com/photos/pBtdIO99UIc","download":"https://unsplash.com/photos/pBtdIO99UIc/download","download_location":"https://api.unsplash.com/photos/pBtdIO99UIc/download"},"categories":[],"likes":13,"liked_by_user":false,"current_user_collections":[],"user":{"id":"uCjRDd85Gm8","updated_at":"2020-01-01T06:03:21-05:00","username":"melissamullinator","name":"Melissa
         Van Gogh","first_name":"Melissa","last_name":"Van Gogh","twitter_username":"thehealthymel","portfolio_url":"http://Thehealthymelissa.com","bio":"Tag
         me on insta @thehealthymelissa","location":"Florida","links":{"self":"https://api.unsplash.com/users/melissamullinator","html":"https://unsplash.com/@melissamullinator","photos":"https://api.unsplash.com/users/melissamullinator/photos","likes":"https://api.unsplash.com/users/melissamullinator/likes","portfolio":"https://api.unsplash.com/users/melissamullinator/portfolio","following":"https://api.unsplash.com/users/melissamullinator/following","followers":"https://api.unsplash.com/users/melissamullinator/followers"},"profile_image":{"small":"https://images.unsplash.com/profile-1560520480097-c6b5d4435ac8?ixlib=rb-1.2.1&q=80&fm=jpg&crop=faces&cs=tinysrgb&fit=crop&h=32&w=32","medium":"https://images.unsplash.com/profile-1560520480097-c6b5d4435ac8?ixlib=rb-1.2.1&q=80&fm=jpg&crop=faces&cs=tinysrgb&fit=crop&h=64&w=64","large":"https://images.unsplash.com/profile-1560520480097-c6b5d4435ac8?ixlib=rb-1.2.1&q=80&fm=jpg&crop=faces&cs=tinysrgb&fit=crop&h=128&w=128"},"instagram_username":"thehealthymelissa","total_collections":4,"total_likes":1112,"total_photos":107,"accepted_tos":true},"tags":[{"type":"search","title":"handrail"},{"type":"search","title":"banister"},{"type":"search","title":"building"}]}]}'
     http_version: 
-  recorded_at: Wed, 15 Jan 2020 01:34:56 GMT
+  recorded_at: Wed, 15 Jan 2020 16:01:06 GMT
 recorded_with: VCR 5.0.0
